connected to mongodb atlas

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://127.0.0.1:27017/tuitionsDB
+MONGO_URI=mongodb+srv://jaiswalsneha419:sneha420@feetrackr.9imqqqa.mongodb.net/FeeTrackr?retryWrites=true&w=majority&appName=FeeTrackr
